# TDA-for-Slugging

./: .gitignore  C22F002.betti  C22F002.csv  C22F002.phg  C22F002.silh  C22F002.silh.npy  C22F002.txt  C22F002_PH_diag.npy  C22F003.betti  C22F003.csv  C22F003.phg  C22F003.silh  C22F003.silh.npy  C22F003.txt  C22F003_PH_diag.npy  C22F004.betti  C22F004.csv  C22F004.phg  C22F004.silh  C22F004.silh.npy  C22F004.txt  C22F004_PH_diag.npy  C22F006.betti  C22F006.csv  C22F006.phg  C22F006.silh  C22F006.silh.npy  C22F006_PH_diag.npy  C22F007.betti  C22F007.csv  C22F007.phg  C22F007.silh  C22F007.silh.npy  C22F007_PH_diag.npy  C22F008.betti  C22F008.csv  C22F008.phg  C22F008.silh  C22F008.silh.npy  C22F008_PH_diag.npy  (+241 more)
Hodge_Decomposition/hodge-slugging/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
Hodge_Decomposition/hodge-slugging/classification/: feature_sets.py
Hodge_Decomposition/hodge-slugging/hodge/: boundary_matrices.py  decomposition.py  pipeline.py  spectrum.py
Hodge_Decomposition/hodge-slugging/monitoring/: sliding_window.py
Hodge_Decomposition/hodge-slugging/notebooks/: 01_synthetic_example.ipynb  02_north_sea_hodge_monitoring.ipynb  03_3w_hodge_classification.ipynb  04_spectral_fingerprints.ipynb
Hodge_Decomposition/hodge-slugging/outputs/: nb02_hodge_rec1_bhp.csv  nb02_hodge_rec1_flp.csv  nb02_hodge_rec2_bhp.csv  nb02_hodge_rec2_flp.csv  nb02_persfeatures_rec1_bhp.csv  nb02_persfeatures_rec1_flp.csv  nb02_persfeatures_rec2_bhp.csv  nb02_persfeatures_rec2_flp.csv
Hodge_Decomposition/hodge-slugging/tests/: test_boundary_matrices.py  (+3 more)
(+77 files in other folders)
