[tool.poetry]
name = "tda"
version = "0.1.0"
description = "testing env for tda for slugging"
authors = ["Simone Casolo <simone.casolo@cognite.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.4.2"
scikit-tda = "^0.1.0"
ipykernel = "^6.0.3"
pandas = "^1.3.1"
giotto-tda = "^0.5.1"
statsmodels = "^0.12.2"
fitter = "^1.4.0"
kaleido = "0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
